tests/parser_cases/invalid/procedure_missing_semicolon.ob0
MODULE Main;
PROCEDURE P(x)
BEGIN
  WriteInt(x)
END P;
BEGIN
END Main.
